<resources>
    <string name="app_name">TeamWork</string>

    <string name="drawer_open" translatable="false">OPEN</string>
    <string name="drawer_close" translatable="false">CLOSE</string>

    <string name="alert_ok" translatable="false">OK</string>
    <string name="alert_cancel" translatable="false">CANCEL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="empty_value" translatable="false">No item exists</string>
    <string name="mail" translatable="false">Mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="don_t_have_an_account_sign_up" translatable="false">Don\'t have an account ? Sign up</string>
    <string name="home" translatable="false">Home</string>
    <string name="_home" translatable="false">Work list</string>
    <string name="room" translatable="false">Room</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="profiles" translatable="false">Profiles</string>
    <string name="add_task" translatable="false">Add task</string>
    <string name="update" translatable="false">Update</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="help" translatable="false">Help</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="group" translatable="false">Group</string>
    <string name="info" translatable="false">Info</string>
    <string name="member" translatable="false">Members</string>
    <string name="activity" translatable="false">Activity</string>
    <string name="power_ups" translatable="false">Power-Ups</string>
    <string name="saved_tags" translatable="false">Saved tags</string>
    <string name="archived" translatable="false">Archived</string>
    <string name="setting_room" translatable="false">Setting room</string>
    <string name="mark" translatable="false">Mark</string>
    <string name="pin_in_screen" translatable="false">Pin in screen</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="share" translatable="false">Share</string>
    <string name="add_room" translatable="false">Add Room</string>
    <string name="name_room" translatable="false">name room</string>
    <string name="search" translatable="false">Search...</string>
    <string name="add_stage" translatable="false">Add stage</string>
    <string name="loading_message" translatable="false">Please wait...</string>
    <string name="notify_empty_stage" translatable="false">Stage can\'t empty</string>
    <string name="notify_connect_wifi" translatable="false">Please connect wifi</string>
    <string name="add_group" translatable="false">Add group</string>
    <string name="open_settings" translatable="false">Open Settings</string>
    <string name="loading_message_login" translatable="false">Login....</string>
    <string name="notifi_error_wifi" translatable="false">Error mail or password, please try again</string>
    <string name="notifi_success_add_room" translatable="false">add room success</string>
    <string name="notify_error_name_empty" translatable="false">Name can\'t empty</string>
    <string name="notify_error_group" translatable="false">Add error, please try again!</string>
    <string name="task" translatable="false">Task</string>
    <string name="username" translatable="false">Full name</string>
    <string name="suggest_register" translatable="false">Don\'t have an account?</string>
    <string name="sign_up" translatable="false"> sign up</string>
    <string name="suggest_login" translatable="false">You have account?</string>
    <string name="sign_in" translatable="false">" sign in"</string>
    <string name="select_file" translatable="false">Select Image</string>
    <string name="per_require_storage" translatable="false">Require Storage</string>
    <string name="infomation" translatable="false">Infomation</string>
    <string name="edit_user" translatable="false">Edit User</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="add_member" translatable="false">add member</string>
    <string name="name_stage" translatable="false">name stage</string>
    <string name="add_member_mail" translatable="false">mail</string>
    <string name="dialog_add_task" translatable="false">name task</string>

    <string name="notification_title" translatable="false">Task đã đến hạn </string>
    <string name="notification_subtitle" translatable="false">Surprise!</string>

    <string name="notification_schedule_title" translatable="false">Đã lên lịch:\u00a0</string>
    <string name="notification_schedule_pattern" translatable="false">dd.MM.yy \u00B7 HH:mm</string>
    <string name="notification_schedule_error" translatable="false">
        Schedule notification: Incorrect Date and Time
    </string>
    <string name="steps" translatable="false">Hướng dẫn sử dụng</string>
    <string name="step_1" translatable="false">Click on [img src=ic_action_settings/]
        icon để đến màn hình Cài đặt có thể thêm nhiều ứng dụng</string>
    <string name="step_2" translatable="false">Click on [img src=ic_action_refresh/]
        icon để làm mới các ứng dụng</string>
    <string name="step_3" translatable="false">Thời gian sử dụng trong một ngày là số phút, trong một tuần là số giờ</string>
    <string name="step_4" translatable="false">Phóng to hoặc thu nhỏ để có thể nhìn rõ ràng dữ liệu</string>
    <string name="step_5" translatable="false">Cuộn theo chiều ngang để xem tất cả các ứng dụng</string>
    <string name="no_data" translatable="false">Chọn ứng dụng từ cài đặt để có thể theo dõi thời gian sử dụng ứng dụng</string>
    <string name="send_slide_member" translatable="false">send_slide_member</string>

    <string name="networks_stats_na" translatable="false">Xin lỗi, tính năng không hỗ trợ trên Android của bạn</string>
    <string name="network_stats" translatable="false">Network Stats</string>
</resources>