<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/profile" />

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/imgUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/img_profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/default_avatar"
                        app:civ_border_color="#111111"
                        app:civ_border_width="3dp" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/img_plus"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignEnd="@+id/img_profile"
                        android:layout_alignBottom="@id/img_profile"
                        android:src="@drawable/ic_plus"
                        app:civ_shadow="true"
                        app:civ_shadow_radius="1dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="Jonny"
                        android:textColor="#424242"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUserId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="123455676254323131313"
                        android:textSize="14sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_add_group" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/group"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvTotalGroup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="10"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_add_room" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/room"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvTotalRoom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="20"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_EditUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/edit_user"
                    android:textAllCaps="true"
                    android:textColor="@color/lightgrey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey" />

                <TextView
                    android:id="@+id/tv_EditPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/change_password"
                    android:textAllCaps="true"
                    android:textColor="@color/lightgrey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey" />

                <TextView
                    android:id="@+id/rlLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/logout"
                    android:textAllCaps="true"
                    android:textColor="@color/lightgrey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvTitleProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/proximanovaregular"
                            android:text="@string/infomation"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tv_ConfirmUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="Done"
                            android:textColor="#FFCF66"
                            android:textSize="14sp"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingEnd="8dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:id="@+id/imgPhoneNumber"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="10dp"
                                android:src="@drawable/ic_call_24dp" />

                            <EditText
                                android:id="@+id/edtPhoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="0989112136"
                                android:textColor="@color/goodgrey"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:paddingEnd="8dp">

                            <ImageView
                                android:id="@+id/imgMail"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="10dp"
                                android:src="@drawable/ic_email_24dp" />

                            <EditText
                                android:id="@+id/edtMail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="jonny@gmail.com"
                                android:textColor="@color/goodgrey"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:paddingEnd="8dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:id="@+id/imgCity"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/circular_grey_bordersolid"
                                android:padding="10dp"
                                android:src="@drawable/ic_location_24dp" />

                            <EditText
                                android:id="@+id/edtCity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:fontFamily="@font/proximanovaregular"
                                android:text="VIET NAM"

                                android:textColor="@color/goodgrey"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>